fixed overflow bug

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -70,7 +70,7 @@ h2{
 /* ========= END SECTION: UNIVERSALS =========*/
 
 html {
-	overflow: hidden;
+//	overflow: hidden;
 }
 
 #sidebar { 
